--- a/Class.html
+++ b/Class.html
@@ -2,7 +2,7 @@
 <title> Class Software </title> 
 </head>
 
-<body>
+<body> Testing </body>
 
 <div class="container">
 <div class = "textbook">
@@ -13,5 +13,6 @@ hello world
 
 </div>
 </body>
+
 
 </html>
