--- a/Class.html
+++ b/Class.html
@@ -1,8 +1,8 @@
-<head> Class </head>
+<head> ASSALAMUALAIKUM </head>
 <title> Class Software </title> 
 </head>
 
-<body> Testing </body>
+<body>
 
 <div class="container">
 <div class = "textbook">
@@ -16,3 +16,4 @@ hello world
 
 
 </html>
+
