--- a/Class.html
+++ b/Class.html
@@ -1,5 +1,6 @@
-<head> ASSALAMUALAIKUM </head>
+<head> 
 <title> Class Software </title> 
+  <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
@@ -16,4 +17,5 @@ hello world
 
 
 </html>
+
 
