--- a/Class.html
+++ b/Class.html
@@ -1,5 +1,5 @@
 <head> 
-<title> Class Software <///title> 
+<title> Class Software </title> 
   <link rel="stylesheet" href="Style.css">
 </head>
 
@@ -17,6 +17,7 @@ hello world
 </body>
 
 </html>
+
 
 
 
