--- a/Class.html
+++ b/Class.html
@@ -1,7 +1,7 @@
-<head> 
+<head> ASSALAMUALAIKUM </head>
 <title> Class Software </title> 
   <link rel="stylesheet" href="Style.css">
-</head>
+
 
 <body>
 
@@ -17,6 +17,7 @@ hello world
 </body>
 
 </html>
+
 
 
 
