--- a/Class.html
+++ b/Class.html
@@ -1,6 +1,6 @@
 <head>
 <title> Class Software </title> 
-  <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="Style.cs">
 </head>
 
 <body>
@@ -17,6 +17,7 @@ hello world
 </body>
 
 </html>
+
 
 
 
