--- a/Class.html
+++ b/Class.html
@@ -1,6 +1,6 @@
 <head>
 <title> Class Software </title> 
-  <link rel="stylesheet" href="Style.cs">
+  <!--<link rel="stylesheet" href="Style.css"> -->
 </head>
 
 <body>
@@ -10,6 +10,7 @@
 
 <p id="Text-content">
 hello world
+  <link rel="stylesheet" href="Style.css">
 </p>
 
 </div>
@@ -17,6 +18,7 @@ hello world
 </body>
 
 </html>
+
 
 
 
