--- a/Class.html
+++ b/Class.html
@@ -1,6 +1,6 @@
 <head>
 <title> Class Software </title> 
-  <link rel="stylesheet" href="Style.CSS">
+  <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
@@ -15,6 +15,7 @@ hello world
 </div> 
 </body>
 </html>
+
 
 
 
